<resources>
    <string name="app_name">Kiosk</string>
    <string name="shopname">Please enter kiosk Name</string>

    <string name="saveshop">save</string>
    <string name="are_you_sure">Are you sure you want to save the following as your kiosk name ?</string>
    <string name="save">save</string>


    <string name="pref_file">preferrence</string>

    <string name="kiosk">kiosk</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kiosk </string>
    <string name="nav_header_subtitle">info@kiosk.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="products">Products</string>
    <string name="kopa">Kopa</string>
    <string name="sales">Sales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="retail">Retail Price</string>
    <string name="cancel">cancel</string>
</resources>
