<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/products"
            android:icon="@drawable/products"
            android:title="@string/products" />
        <item
            android:id="@+id/kopa"
            android:icon="@drawable/lend"
            android:title="@string/kopa" />
        <item
            android:id="@+id/sales"
            android:icon="@drawable/sale"
            android:title="@string/sales" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
